--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,170 +1,160 @@
+$t:top;
+$b:bottom;
+$l:left;
+$r:right;
+@mixin w($width) {
+    width: $width;
+}
+
+@mixin h($height) {
+    height: $height;
+}
+
 .about {
-    height: 326px;
+    @include h(326px);
     padding: 23px 0 40px;
     background-color: #FFF;
-    margin-top: 40px
-}
-
-.wrap {
-    width: 1190px;
-    margin: 0 auto
-}
-
-.about ul {
-    margin-bottom: 20px;
-    height: 45px;
-}
-
-.about li {
-    float: left;
-    width: 297px;
-    height: 45px;
-    line-height: 45px;
-    text-align: center;
-    font-size: 18px;
-    border-right: 1px solid #e9e9e9;
-    color: #999
-}
-
-.about li span {
-    display: inline-block;
-    width: 45px;
-    height: 45px;
-    margin-right: 15px;
-    background: url(../img/about.png) no-repeat;
-    vertical-align: middle
-}
-
-.about .shopping span {
-    background-position: -45px 0
-}
-
-.about .fast span {
-    background-position: -90px 0
-}
-
-.about .return {
-    width: 296px;
-    border-right: 0
-}
-
-.about .return span {
-    background-position: -135px 0
-}
-
-.about .link {
-    padding-top: 40px;
-    border-top: 1px solid #e9e9e9
-}
-
-.about dl {
-    float: left;
-    width: 298px;
-    text-indent: 110px
-}
-
-.about dt {
-    height: 35px;
-    font-size: 14px
-}
-
-.about dd {
-    position: relative;
-    height: 24px
-}
-
-.about dd a {
-    color: #999
-}
-
-.about dd a:hover {
-    color: #e90404
-}
-
-.about dd .tip {
-    display: none;
-    position: absolute;
-    top: 30px;
-    left: 49px;
-    padding: 10px 20px;
-    line-height: 22px;
-    font-size: 14px;
-    background-color: #FFF;
-    border: 1px solid #f5f5f5;
-    color: #666;
-    box-shadow: 0 3px 3px #CCC;
-    text-indent: 0;
-    white-space: nowrap
-}
-
-.about dd .tip span {
-    color: #ff5353
-}
-
-.about dd .tip i {
-    position: absolute;
-    top: -12px;
-    left: 33px;
-    width: 22px;
-    height: 12px;
-    background: url(../img/base.png) no-repeat 0 -300px
-}
-
-.about .contact {
-    float: right;
-    min-height: 115px;
-    width: 227px;
-    padding-left: 67px;
-    border-left: 1px solid #e9e9e9
-}
-
-.about .contact .tel {
-    font-size: 24px;
-    font-family: Arial
-}
-
-.about .contact .time {
-    padding: 16px 0 24px 0;
-    font-size: 14px;
-    color: #999
-}
-
-.about .contact .tsjb {
-    text-indent: 50px;
-    text-indent: 50px;
-    font-size: 14px;
-    color: #474747;
-    padding: 16px 0 0;
-    display: block
-}
-
-.about .contact a.kf {
-    display: block;
-    width: 154px;
-    height: 35px;
-    line-height: 35px;
-    text-align: center;
-    color: #ea0f1f;
-    font-size: 16px;
-    border: 1px solid #ff5353;
-    border-radius: 3px
-}
-
-.about .contact a.kf span {
-    display: inline-block;
-    width: 18px;
-    height: 15px;
-    margin-right: 6px;
-    background: url(../img/base.png) no-repeat -188px 0;
-    vertical-align: middle
-}
-
-.about .contact a.kf:hover {
-    background-color: #e32331;
-    border-color: #e32331;
-    color: #FFF
-}
-
-.about .contact a.kf:hover span {
-    background-position: -240px 0
+    margin-#{$t}: 40px;
+    a {
+        text-decoration: none;
+    }
+    .wrap {
+        @include w(1190px);
+        margin: 0 auto;
+        ul {
+            margin-#{$b}: 20px;
+            @include h(45px);
+            li {
+                float: $l;
+                @include w(297px);
+                @include h(45px);
+                line-height: 45px;
+                text-align: center;
+                font-size: 18px;
+                border-#{$r}: 1px solid #e9e9e9;
+                color: #999;
+                span {
+                    display: inline-block;
+                    @include w(45px);
+                    @include h(45px);
+                    margin-#{$r}: 15px;
+                    background: url(../img/about.png) no-repeat;
+                    vertical-align: middle
+                }
+            }
+            .shopping span {
+                background-position: -45px 0
+            }
+            .fast span {
+                background-position: -90px 0
+            }
+            .return {
+                @include w(296px);
+                border-right: 0;
+                span {
+                    background-position: -135px 0;
+                }
+            }
+        }
+        .link {
+            padding-#{$t}: 40px;
+            border-#{$t}: 1px solid #e9e9e9;
+            dl {
+                float: $l;
+                @include w(298px);
+                text-indent: 110px;
+                dt {
+                    @include h(35px);
+                    font-size: 14px
+                }
+                dd {
+                    position: relative;
+                    @include h(24px);
+                    a {
+                        color: #999;
+                        &:hover {
+                            color: #e90404
+                        }
+                    }
+                    .tip {
+                        display: none;
+                        position: absolute;
+                        #{$t}: 30px;
+                        #{$l}: 49px;
+                        padding: 10px 20px;
+                        line-height: 22px;
+                        font-size: 14px;
+                        background-color: #FFF;
+                        border: 1px solid #f5f5f5;
+                        color: #666;
+                        box-shadow: 0 3px 3px #CCC;
+                        text-indent: 0;
+                        white-space: nowrap;
+                        span {
+                            color: #ff5353
+                        }
+                        i {
+                            position: absolute;
+                            #{$t}: -12px;
+                            #{$l}: 33px;
+                            @include w(22px);
+                            @include h(12px);
+                            background: url(../img/base.png) no-repeat 0 -300px
+                        }
+                    }
+                }
+            }
+            .contact {
+                float: $r;
+                min-height: 115px;
+                @include w(227px);
+                padding-#{$l}: 67px;
+                border-#{$l}: 1px solid #e9e9e9;
+                .tel {
+                    font-size: 24px;
+                    font-family: Arial
+                }
+                .time {
+                    padding: 16px 0 24px 0;
+                    font-size: 14px;
+                    color: #999
+                }
+                .tsjb {
+                    text-indent: 50px;
+                    text-indent: 50px;
+                    font-size: 14px;
+                    color: #474747;
+                    padding: 16px 0 0;
+                    display: block
+                }
+                .kf {
+                    display: block;
+                    @include w(154px);
+                    @include h(35px);
+                    line-height: 35px;
+                    text-align: center;
+                    color: #ea0f1f;
+                    font-size: 16px;
+                    border: 1px solid #ff5353;
+                    border-radius: 3px;
+                    span {
+                        display: inline-block;
+                        @include w(18px);
+                        @include h(15px);
+                        margin-#{$r}: 6px;
+                        background: url(../img/base.png) no-repeat -188px 0;
+                        vertical-align: middle
+                    }
+                    &:hover {
+                        background-color: #e32331;
+                        border-color: #e32331;
+                        color: #FFF
+                    }
+                    &:hover span {
+                        background-position: -240px 0
+                    }
+                }
+            }
+        }
+    }
 }
