--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,3 +11,20 @@
 @import "area-hot";
 @import "about";
 @import "copyright";
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+html,
+body {
+    font-size: 12px;
+    font-family: "Microsoft YaHei",
+}
+
+body {
+    background-color: #f5f5f5;
+    color: #474747;
+    min-width: 1300px
+}
